# meierlab

./: .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.md  LICENSE.rst  README.md  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package.yml
data/schaefer2018/: tpl-MNI152NLin2009cAsym_atlas-Schaefer2018UPDATED_desc-400Parcels7Networks_dseg.tsv  tpl-MNI152NLin2009cAsym_atlas-Schaefer2018UPDATED_desc-400Parcels7Networks_dseg_separateLabels.csv
docs/: Makefile  authors.rst  conduct.rst  conf.py  example.ipynb  index.md  index.rst  introduction.rst  license.rst  make.bat  quickstart.rst  readme.rst  requirements.txt  sg_execution_times.rst  user_guide.rst  whats_new.rst
docs/_templates/: class.rst  function.rst
docs/auto_examples/: index.rst  searchindex.db
docs/changes/: 0.1.0-beta.rst  0.1.0.rst  0.1.1.rst  0.2.0.rst  0.3.0.rst  latest.rst  whats_new.rst
docs/modules/: cirxnat.rst  index.rst  networks.rst  outliers.rst  postproc.rst  preproc.rst  quality.rst  viz.rst
docs/networks/: index.rst
docs/quality/: exploreasl_quality.rst  index.rst
docs/sphinxext/: github_link.py
docs/viz/: index.rst
examples/00_tutorials/: README.rst  plot_downloads.py
examples/01_plotting/: README.rst  plot_atlas.py
examples/02_preproc/: exploreasl_quality_example.py
examples/03_postproc/: README.md  tractography_example.py
examples/03_postproc/configs/: cmc_example.yaml  deterministic_example.yaml  probabilistic_example.yaml  template_config.yaml
src/meierlab/: __init__.py  cirxnat.py  freesurfer.py  http___cirxnat1.rcc.mcw.edu_xnat  masks.py  outliers.py  reports.py
src/meierlab/datasets/: __init__.py  atlas.py
src/meierlab/networks/: graph.py
src/meierlab/postproc/: qsm.py  tractography.py
src/meierlab/postproc/quality/: index_template.html  pipeline_config.py  pipeline_examples.py  subject_template.html  tractography_metrics.py  tractography_viz.py
src/meierlab/preproc/: qsm.py
src/meierlab/quality/: README_exploreasl_qc.md  __init__.py  exploreasl.py  freesurfer.py  workflows.py
src/meierlab/quality/config_examples/: exploreasl_config.yaml
src/meierlab/stats/: freesurfer.py  tractography.py
src/meierlab/stats/html/: freesurfer_group_stats.html
src/meierlab/templates/: README.md  __init__.py  base.py  cli.py  download.py  examples.py  quickstart.py  setup_test_env.py  test_config.py
src/meierlab/templates/config_examples/: batch_config.yaml  custom_xnat_config.yaml  env_example.txt  xnat_config.yaml
src/meierlab/viz/: network_viz.py  networks.py  outlier_viz.py  outliers.py  template.py
tests/: __init__.py  conftest.py  test_cirxnat.py  test_exploreasl_quality.py  test_freesurfer.py  test_graph.py  test_meierlab.py  test_templates.py  test_tractography.py  test_workflows.py
tests/data/: FreeSurferColorLUT.txt  atlas.csv  sub-atlas.tsv  talairach.xfm.lta  wm.mgz
tests/data/aparc_aseg/: aparc+aseg.mgz  brainmask.mgz  lh.ribbon.mgz  rh.ribbon.mgz
