[tool.poetry]
name = "meierlab"
version = "0.2.0"
description = "Meier Lab tools"
authors = ["Lezlie Espana"]
license = "None"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
tox = "^4.4.5"
flake8 = "^6.0.0"
black = "^23.1.0"


[tool.poetry.group.docs.dependencies]
sphinx-autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.2.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

