[project]
name = "meierlab"
version = "0.2.0"

description = "MCW Meier Lab tools"
authors = [
    {name = "MCW Meier Lab", email = "lespana@mcw.edu"},
]
dependencies = [
    "pandas>=2.1.0",
    "nilearn>=0.10.1",
    "numpy>=1.25.2",
    "nibabel>=5.1.0",
    "nipype>=1.8.6",
    "networkx>=3.1",
    "plotly>=5.16.1",
    "dash>=2.13.0",
    "jupyter-dash>=0.4.2",
    "matplotlib>=3.8.2",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Apache-2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
]
doc = [
    "sphinx>=7.2.5",
    "sphinx-autoapi>=2.1.1",
    "sphinx-rtd-theme>=1.3.0",
    "flake8-docstrings>=1.7.0",
    "sphinx-design>=0.5.0",
    "sphinx-gallery>=0.14.0",
    "numpydoc>=1.5.0",
    "furo>=2023.8.19",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
]
lint = [
]
dev = [
    "pre-commit>=3.3.3",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "black>=23.7.0",
]
[tool.pytest.ini_options]
markers = [
    "download: actually download data"
]
